# stylist_ai_be

./: .dockerignore  .env.example  .gitignore  Dockerfile  LOGGING.md  README.md  app.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  migrate_db.py  migrate_products.py  pyproject.toml  test.py  test_user_profile.py
data/: lacoste_coupang_combined.json  outfit.json  popularity.json  users.db  zara_data_balanced-1.json  zara_data_extended.json  zara_data_output - zara_data_output.csv
docs/: DOCKER.md  ensemble-guide.md  hackaton.md  onboarding-setup.md  personal-color-analysis-guide.md  user-profile-api.md  validation-guide.md
src/: config.py  db.py  googlesheet.py  models.py  prompts.py  stylist.py
src/api/: auth.py  beauty.py  color.py  outfits.py  shape.py  try_on.py  user_color.py  user_info.py  user_outfits.py
src/database/: __init__.py  db.py  googlesheet.py  popularity.py  user_db.py
src/middleware/: metrics.py  rate_limit.py
src/services/: __init__.py  ensemble.py  stylist.py
src/utils/: __init__.py  auth.py  image_utils.py  image_validator.py  logger.py
tests/: conftest.py  test_image_utils.py  test_image_validator.py  test_rate_limiter.py
validation/: analyze_confidence.py  quick_validate.py  validate_model.py
